# capyarm

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: Dependencies.cmake
core/: CMakeLists.txt
core/server_root/: CMakeLists.txt
core/server_root/include/: DI_ServerRoot.hpp  ServerRoot.hpp
core/server_root/src/: ServerRoot.cpp
testing/: CMakeLists.txt
testing/src/: DefaultTest.cpp
